fix for video on mobile devices

--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -462,6 +462,8 @@ nav li a:hover, nav li a:active {
     background: no-repeat;
    	background-position: center;
     margin: 0;
+    display: block;
+    width: 100%;
 }
 
 .contents { 
